[gd_scene load_steps=13 format=3 uid="uid://dpwo16il6uqbq"]

[ext_resource type="Script" path="res://Actors/Player.gd" id="1_pagr2"]
[ext_resource type="Texture2D" uid="uid://c6t6gvjt12qsw" path="res://Assets/Actors/FemaleSheet.png" id="1_y5ek7"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7md6v"]
radius = 15.0
height = 58.0

[sub_resource type="Animation" id="Animation_pnjeq"]
resource_name = "idle_jump_l"
length = 0.03
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteL:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_bdirh"]
resource_name = "idle_jump_r"
length = 0.03
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteR:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_j17c8"]
resource_name = "idle_l"
length = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteL:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}

[sub_resource type="Animation" id="Animation_8i25c"]
resource_name = "idle_r"
length = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteR:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}

[sub_resource type="Animation" id="Animation_670am"]
resource_name = "jump_l"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteL:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 2, 1]
}

[sub_resource type="Animation" id="Animation_k4xwl"]
resource_name = "jump_r"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteR:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 2, 1]
}

[sub_resource type="Animation" id="Animation_uiakf"]
resource_name = "walk_left"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteL:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 25]
}

[sub_resource type="Animation" id="Animation_1pm2h"]
resource_name = "walk_right"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteR:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 25]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3bpit"]
_data = {
"idle_jump_l": SubResource("Animation_pnjeq"),
"idle_jump_r": SubResource("Animation_bdirh"),
"idle_l": SubResource("Animation_j17c8"),
"idle_r": SubResource("Animation_8i25c"),
"jump_l": SubResource("Animation_670am"),
"jump_r": SubResource("Animation_k4xwl"),
"walk_left": SubResource("Animation_uiakf"),
"walk_right": SubResource("Animation_1pm2h")
}

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_pagr2")

[node name="SpriteR" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0.52002, -13)
scale = Vector2(0.27625, 0.289063)
texture = ExtResource("1_y5ek7")
hframes = 9
vframes = 5
frame = 1

[node name="SpriteL" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(0.52002, -13)
scale = Vector2(0.27625, 0.289063)
texture = ExtResource("1_y5ek7")
flip_h = true
hframes = 9
vframes = 5
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.04004, -3)
shape = SubResource("CapsuleShape2D_7md6v")

[node name="PlayerAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3bpit")
}

[node name="Camera2D" type="Camera2D" parent="."]
